Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,3 @@
-"Here is an example of some text."
-"Here is some more text."
-"More text is a good thing in a text file."
+<li>"Here is an example of some text."</li>
+<li>"Here is some more text."</li>
+<li>"More text is a good thing in a text file."</li>
