--- a/my_list.html
+++ b/my_list.html
@@ -1,3 +1,4 @@
+<p>Here is my paragraph talking about this list.</p>
 <ul>
   <li>"Here is an example of some text."</li>
   <li>"Here is some more text."</li>
